[TS-3714]: Summary of changes below: a) Issue a SSL_read right after SSL handshake to ensure data already in the SSL buffers is not lost. b) Add vc to net thread's read_ready_list immediately after accept, to ensure data already in the socket buffers is not lost. c) Add a timer for SSL handshake with default to no timer (as today). d) Fix a bunch of error cases to correctly release resources.