iocore/net/P_SSLNetVConnection.h
@@ -219,6 +219,24 @@ public:
   // least some of the hooks
   bool calledHooks(TSHttpHookID /* eventId */) { return (this->sslHandshakeHookState != HANDSHAKE_HOOKS_PRE); }
 
+  MIOBuffer*
+  get_ssl_iobuf()
+  {
+    return iobuf;
+  }
+
+  IOBufferReader*
+  get_ssl_reader()
+  {
+    return reader;
+  }
+
+  bool
+  isEosRcvd()
+  {
+    return eosRcvd;
+  }
+
 private:
   SSLNetVConnection(const SSLNetVConnection &);
   SSLNetVConnection &operator=(const SSLNetVConnection &);
@@ -256,6 +274,11 @@ private:
   const SSLNextProtocolSet *npnSet;
   Continuation *npnEndpoint;
   SessionAccept *sessionAcceptPtr;
+
+  MIOBuffer *iobuf;
+  IOBufferReader *reader;
+  bool eosRcvd;
+
 };
 
 typedef int (SSLNetVConnection::*SSLNetVConnHandler)(int, void *);
